--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-items-carousel": "^2.8.0"
+    "react-items-carousel": "^2.8.0",
+    "react-multi-carousel": "^2.5.5"
   },
   "devDependencies": {
     "@svgr/cli": "^5.4.0",
