--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@svgr/cli": "^5.4.0",
     "eslint": "^7.7.0",
     "eslint-plugin-react": "^7.20.6",
+    "postcss-custom-media": "^7.0.8",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0"
   }
